force-app/main/default/objects/Variable_Storage_Charge__c/Variable_Storage_Charge__c.object-meta.xml
<CustomObject>
    <label>Variable Storage Charge</label>
    <nameField>
        <label>Sequence Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Variable Storage Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>