force-app/main/default/objects/Variable_Storage_Charge__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Variable Storage Charges</relationshipLabel>
    <relationshipName>Variable_Storage_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>