force-app/main/default/objects/Variable_Storage_Charge__c/fields/Variable_Days__c.field-meta.xml
<CustomField>
    <fullName>Variable_Days__c</fullName>
    <label>Variable Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>